Swagger-generated Feign client
