# src/main/resources/swagger.json
@@ -11,6 +11,9 @@
 	},
 	"host": "localhost:8080",
 	"basePath": "/productservice",
+	"schemes" : [
+		"http"
+	],
 	"tags": [
 		{
 			"name": "product-controller",
@@ -18,6 +21,53 @@
 		}
 	],
 	"paths": {
+		"/product/add": {
+			"post": {
+				"tags": [
+					"product-controller"
+				],
+				"summary": "addProduct",
+				"operationId": "addProductUsingPOST",
+				"consumes": [
+					"application/json"
+				],
+				"produces": [
+					"application/json"
+				],
+				"parameters": [
+					{
+						"in": "body",
+						"name": "product",
+						"description": "product",
+						"required": true,
+						"schema": {
+							"$ref": "#/definitions/Product"
+						}
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "OK",
+						"schema": {
+							"$ref": "#/definitions/AddProductResponse"
+						}
+					},
+					"201": {
+						"description": "Created"
+					},
+					"401": {
+						"description": "Unauthorized"
+					},
+					"403": {
+						"description": "Forbidden"
+					},
+					"404": {
+						"description": "Not Found"
+					}
+				},
+				"deprecated": false
+			}
+		},
 		"/products": {
 			"get": {
 				"tags": [
@@ -51,7 +101,7 @@
 				"deprecated": false
 			}
 		},
-		"/products/customer/{custId}": {
+		"/products/customers/{custId}": {
 			"get": {
 				"tags": [
 					"product-controller"
@@ -134,6 +184,19 @@
 		}
 	},
 	"definitions": {
+		"AddProductResponse": {
+			"type": "object",
+			"properties": {
+				"productId": {
+					"type": "integer",
+					"format": "int64"
+				},
+				"status": {
+					"type": "string"
+				}
+			},
+			"title": "AddProductResponse"
+		},
 		"Product": {
 			"type": "object",
 			"properties": {
